# dataScipy

./: AUTHORS.md  HISTORY.md  LICENCE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
dataScipy/: DataScience.py  __init__.py
src/dataScipy/: DataScience.py  __init__.py
src/dataScipy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
