[metadata]
name = dataScipy
author = Bora Aktas
author_email = baktas19@ku.edu.tr
version = 0.0.1
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: KU License
    Natural Language :: English
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = Python Library for some data-science tasks
license = KU license
keywords = dataScipy
url = https://github.com/boraaktas/dataScipy

[options]
python_requires = >=3.5
include_package_data = True
packages = find:
